--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "dapp-transfer-system",
-  "version": "1.0.0",
+  "name": "dapptransfersystem",
+  "version": "0.1.0",
   "private": true,
+  "homepage": "https://Sakib1150.github.io/DAppTransferSystem",
   "dependencies": {
-    "ethers": "^6.8.1",
-    "web3modal": "^1.9.12",
+    "ethers": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
