--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "dapptransfersystem",
-  "version": "0.1.0",
+  "name": "dapp-transfer-system",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://Sakib1150.github.io/DAppTransferSystem",
   "dependencies": {
-    "ethers": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -13,10 +11,25 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
