--- a/package.json
+++ b/package.json
@@ -4,22 +4,20 @@
   "private": true,
   "homepage": "https://sakib1150.github.io/DAppTransferSystem",
   "dependencies": {
-    "@metamask/detect-provider": "^2.0.0",
-    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web3modal": "^1.9.13"
+    "web3modal": "^1.9.12",
+    "ethers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
